add swagger for login and register, add foreign key for activity and restaurant
